logs/dag_id=dag_with_postgres_v02/run_id=manual__2023-12-04T14:30:12.132966+00:00/task_id=create_post_/attempt=1.log
[2023-12-04T14:30:13.549+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_v02.create_post_ manual__2023-12-04T14:30:12.132966+00:00 [queued]>
[2023-12-04T14:30:13.563+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_v02.create_post_ manual__2023-12-04T14:30:12.132966+00:00 [queued]>
[2023-12-04T14:30:13.564+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 6
[2023-12-04T14:30:13.590+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_post_> on 2023-12-04 14:30:12.132966+00:00
[2023-12-04T14:30:13.595+0000] {standard_task_runner.py:57} INFO - Started process 68674 to run task
[2023-12-04T14:30:13.599+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_v02', 'create_post_', 'manual__2023-12-04T14:30:12.132966+00:00', '--job-id', '270', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres.py', '--cfg-path', '/tmp/tmpcy4l6k6r']
[2023-12-04T14:30:13.603+0000] {standard_task_runner.py:85} INFO - Job 270: Subtask create_post_
[2023-12-04T14:30:13.672+0000] {task_command.py:416} INFO - Running <TaskInstance: dag_with_postgres_v02.create_post_ manual__2023-12-04T14:30:12.132966+00:00 [running]> on host a859eb4bf49d
[2023-12-04T14:30:13.788+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='debora' AIRFLOW_CTX_DAG_ID='dag_with_postgres_v02' AIRFLOW_CTX_TASK_ID='create_post_' AIRFLOW_CTX_EXECUTION_DATE='2023-12-04T14:30:12.132966+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-12-04T14:30:12.132966+00:00'
[2023-12-04T14:30:13.790+0000] {sql.py:274} INFO - Executing: 
        
            create table if not exists dag_runs(
            dt date, 
            dag_id character varying
            primary key (dt, dag_id)
            )

        
[2023-12-04T14:30:13.802+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-12-04T14:30:13.815+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-12-04T14:30:13.827+0000] {sql.py:418} INFO - Running statement: 
        
            create table if not exists dag_runs(
            dt date, 
            dag_id character varying
            primary key (dt, dag_id)
            )

        , parameters: None
[2023-12-04T14:30:13.835+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 6:             primary key (dt, dag_id)
                                ^

[2023-12-04T14:30:13.848+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_v02, task_id=create_post_, execution_date=20231204T143012, start_date=20231204T143013, end_date=20231204T143013
[2023-12-04T14:30:13.865+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 270 for task create_post_ (syntax error at or near "("
LINE 6:             primary key (dt, dag_id)
                                ^
; 68674)
[2023-12-04T14:30:13.894+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-12-04T14:30:13.916+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
